tools/flowc/tests/errors/error14.flow
import string;

// Test on detection of name conflict of a local variable and a struct/union

x : (a : int);
y ::= A;
	A();

fun1() -> int {
	x = 5;
	(\y -> y + 1)(x)
}
